--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@ important research topic, and attract more and more attentions.
 \end{figure}
 
 \subsubsection{表格}
-\begin{table}[!htbp]
+\begin{table}[h]
     \centering\caption{特征描述}
     \begin{tabular}{lll}
     \toprule  \label{tab}
