--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-%!TEX program = xelatex
 % 完整编译: xelatex -> bibtex -> xelatex -> xelatex
 \documentclass[UTF8,AutoFakeBold=1,AutoFakeSlant,zihao=-4]{cucthesis}
 
@@ -9,9 +8,9 @@
 % 在这里填写你的相关信息
 \newcommand{\yourDept}{计算机与网络空间安全学院}
 \newcommand{\yourMajor}{计算机科学与技术}
-\newcommand{\yourName}{王某某}
-\newcommand{\yourClass}{2016级01班}
-\newcommand{\yourMentor}{王某某}
+\newcommand{\yourName}{王同学}
+\newcommand{\yourClass}{2020级01班}
+\newcommand{\yourMentor}{王老师}
 \newcommand{\studentID}{202020111222333}
 
 
@@ -63,7 +62,7 @@ important research topic, and attract more and more attentions.
 \end{figure}
 
 \subsubsection{表格}
-\begin{table}[h]
+\begin{table}[ht]
     \centering\caption{特征描述}
     \begin{tabular}{lll}
     \toprule  \label{tab}
