--- a/example_game_design.tex
+++ b/example_game_design.tex
@@ -2,7 +2,7 @@
 \documentclass[UTF8,AutoFakeBold=1,AutoFakeSlant,zihao=-4]{cucthesis}
 
 % 在这里填写你的论文题目
-\newcommand{\thesisTitle}{黑暗森林游戏策划书}
+\newcommand{\thesisTitle}{《黑暗森林》游戏策划书}
 \newcommand{\thesisTitleEN}{Game Design Document}
 
 % 在这里填写你的相关信息
