--- a/main.tex
+++ b/main.tex
@@ -2,107 +2,56 @@
 \documentclass[UTF8,AutoFakeBold=1,AutoFakeSlant,zihao=-4]{cucthesis}
 
 % 在这里填写你的论文题目
-\newcommand{\thesisTitle}{\hologo{LaTeX}毕业论文写作模板}
-\newcommand{\thesisTitleEN}{English Title (not used)}
+\newcommand{\thesisTitle}{基于视频的人数统计方法研究} % 论文的中文名称
+\newcommand{\thesisTitleEN}{Video-Based People Counting Methods} % 论文的英文名称
 
 % 在这里填写你的相关信息
 \newcommand{\yourDept}{计算机与网络空间安全学院}
 \newcommand{\yourMajor}{计算机科学与技术}
 \newcommand{\yourName}{王同学}
-\newcommand{\yourClass}{2020级01班}
+\newcommand{\yourNameEN}{Wang Z.}
+\newcommand{\yourClass}{2017级计算机科学与技术}
 \newcommand{\yourMentor}{王老师}
-\newcommand{\studentID}{202020111222333}
-
+\newcommand{\studentID}{201720111222333}
 
 \begin{document}
-
 % 封面（自动生成）
 \coverpage
 
 % 中文摘要
 \begin{abstract}
-随着3G时代的来临，移动通信技术正从提供简单的话音业务、
-低速数据业务向提供话音业务和可变带宽的多媒体数据业务相结合的方向发展。
-天线，作为移动通信无线链路中最重要的部件，也因此成为研究重点，
-受到了越来越广泛的关注。
-\keywords{数字信号处理；音频信号频谱；MATLAB；FFT；DSP}     % 中文关键词
+为了加强对一些特定区域的管理和保护，通常会使用视频监控系统以获取相关信息，如...。
+\keywords{单高斯背景建模；腐蚀；目标匹配}     % 中文关键词
 \end{abstract}
 
 % 英文摘要
 \begin{abstractEN}
-With the coming of the era named ``Third Generation'',
-the mobile communication technologies are changing
-its direction from providing simple services of voice
-and low speed data transmission to providing combination
-services of voice and multi-media data transmission with
-variable band-width. Antennas, as the most important part
-in the radio link of mobile communication, become an
-important research topic, and attract more and more attentions.
-\keywordsEN{DSP, Spectral Analysis, FFT, MATLAB}       % 英文关键词
+The story takes place on a fictitious continent. An unknown force attacked this world, and darkness swallowed everything, followed by various monster attacks, and the human world was completely destroyed. At the time when hope was about to be shattered,
+people finally discovered that although these monsters are powerful, they can only exert their full strength in the dark.
+Although the chances are slim in the light, people still have the power to fight. The surviving people from various places built several giant lighthouses and built gathering places around the lighthouses. In order to maintain this light curtain, the last high wall of mankind, people have to go deep into the dark forest for adventure.
+\keywordsEN{Dark Forest, Game Design, RPG}       % 英文关键词
 \end{abstractEN}
 
 % 目录（自动生成）
 \contentpage
 
-\section{一级标题}
-
-\subsection{二级标题}
-正文……\cite{bib01}正文正文\cite{bib02}正文正文\cite{bib01,bib02}
-
-\subsection{二级标题}
-引用图\ref{fig}，表\ref{tab}，公式\eqref{eq:0}
-
-
-\subsubsection{图片}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[scale=0.64]{imgs/fig.png}
-    \caption{工科生工作现场}    \label{fig}
-\end{figure}
-
-\subsubsection{表格}
-\begin{table}[ht]
-    \centering\caption{特征描述}
-    \begin{tabular}{lll}
-    \toprule  \label{tab}
-                 & 特征描述    & 特征维数      \\   \midrule
-    平均过零率    & 波形穿过x轴的频率   & 1     \\
-    平均光谱质心  & 指示声音的“质心”    & 1     \\  \bottomrule
-    \end{tabular}
-\end{table}
-
-
-\subsubsection{公式}
-
-\begin{equation}
-    loss = - \sum_{i=1}^{n}{y_i\:log(\hat{y_i})} +     \label{eq:0}
-    \lambda {\left\lVert\omega\right\rVert}_2^2
-\end{equation}
-
-\subsubsection{代码}
-
-\begin{lstlisting}[language=Python]
-import numpy as np
-
-def normalize(x):
-    mean = np.mean(x)
-    std = np.std(x, ddof=1)
-    return (x - mean) / std
-
-\end{lstlisting}
-
+\include{includes/section_01.tex}
+\include{includes/section_02.tex}
+\include{includes/section_03.tex}
+\include{includes/section_04.tex}
 
 % 参考文献（自动生成）
 \begin{references}
     \bibliography{references.bib}
 \end{references}
 
-\nonumsection{附录}
-\appendixformat     % 作为附录时，使用该命令为图表更新格式
-123
+\appendix
+\include{includes/appendix_A.tex}
+\include{includes/appendix_B.tex}
 
 \nonumsection{后记}
-123
+鉴于要展现的是一个黑暗的魔幻世界，本游戏采用偏向于哥特式，色调偏暗的2D美术风格。而建筑则为偏向于中世纪欧洲的建筑风格。
+哥特式风格偏向暗系，可以将玩家在森林中的黑暗无所不在的压迫感表现得淋漓尽致，能使得玩家在重见光明时的欣喜提升到最大。类似于盐和庇护所和地下城堡2等游戏。
+但是本游戏在光照上将更加黑暗，人物更加精致。建筑风格与环境的搭建将参考中世纪欧洲建筑风格。玩家在探索中也会见到各种失落的中世纪欧洲城市与遗迹，更加符合玩家审美。
 
 \end{document}
